[metadata]
name = miraclesort
url = https://github.com/seluj78/miraclesort
version = 1.0.0
description = This is a Python implementation for the Miracle Sort
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = miracle, sort, python
license = MIT
author = Jules Lasne
author_email = jules.lasne@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = True
include_package_data = True
